--- a/singolo2.css
+++ b/singolo2.css
@@ -31,14 +31,15 @@
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
   }
 
-.content_wrapper {
-    width: 1020px;
-    display: flex;
-    justify-content: center;
-    margin-left: auto;
-    margin-right: auto;
-}
-.header_wrapper {
+  @font-face {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Lato Regular'), local('Lato-Regular'), url(https://fonts.gstatic.com/s/lato/v16/S6uyw4BMUTPHjx4wXiWtFCc.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  }
+
+  .header_wrapper {
     width: 100%;
     background-color: #2d303a;
     display: flex;
@@ -61,188 +62,205 @@
     color: white;
 }
 
-.logo {
-    letter-spacing: 0px;
-    font-size: 25px;
-    font-family: "Lato";
-    font-weight: 700;
-    font-style: normal;
-    text-transform: uppercase;
-    text-decoration: none;
+.content_wrapper {
+    width: 1020px;
+    /* display: flex;
+    justify-content: center; */
+    margin-left: auto;
+    margin-right: auto;
 }
 
-.logo .text {
-    color: #ffffff;
-}
-
-.logo .symbol {
-    color: #f06c64;
-    margin-left: -5px;
-}
-
-.navbar {
-    width: 371px;
-    font-size: 12px;
-    font-family: "Lato";
-    font-weight: 700;
-    font-style: normal;
-    text-transform: uppercase;
-    margin-top: 10px;
-}
-
-.navbar .navbar_list {
-    display: flex;
-    justify-content: space-between;
-}
-
-.navbar ul li a {
-    color: white;
-    text-decoration: none;
-}
-
-.navbar ul li a:hover {
-    color: #f06c64;
-}
-
-.slider {
-    background-color: #f06c64;
-    width: 100%;
-    height: 594px;
-    border-bottom: 6px solid #ea676b;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.slider .main {
-    display: flex;
-    width: 796px;
-}
-
-.iphone_vert {
-    margin-bottom: 50px;
-}
-
-.iphone_horiz {
-    right: 330px;
-    position: relative;
-    top: 85px;
-}
-
-.button {
-    height: 27px;
-    width: 16px;
-    background-color:  #f06c64;
-    border: none;
-    margin: 0px 42px 0px 42px;
-}
-
-.button:hover {
-    /* background-color: white; */
-    border: 1px solid #5f201d;
-}
-
-.left_button {
-    background-image: url('./assets/images/left_button.svg');
-}
-
-.right_button {
-    background-image: url('./assets/images/right_button.svg');
-}
-
-.our_service {
-    width: 100%;
-    height: 497px;
-    border-bottom: 5px solid white;
-    background-color: #f2f2f2;
+.portfolio {
+    background-color: #2d303a;
+    height: 864px;
     display: flex;
     justify-content: center;
+    border-bottom: 6px solid #323746
 }
 
-.our_service_main {
+.portfolio_main {
     width: 940px;
-    /* display: flex;
-    flex-direction: column; */
-    /* justify-content: space-between; */
 }
 
-.our_service_title_wrapper {
+.portfolio_title {
+    height: 120px;
     width: 100%;
-    padding-top: 61px;
+    /* border: 1px solid red; */
 }
 
-.our_service_title {
+.portfolio_title_text {
     font-size: 30px;
-    font-family: "Lato";
-    font-weight: 900;
-    font-style: normal;
-    text-decoration: none;
-    color: #666d89;
-    /* margin-top: 50px; */
-}
-
-.our_service_text {
-    letter-spacing: 0px;
-    width: 100%;
-    height: 57px;
-    font-size: 18px;
-    line-height: 30px;
-    font-family: "Lato";
-    font-weight: 300;
-    font-style: normal;
-    text-decoration: none;
-    color: #767e9e;
-    text-align: left;
-    padding-top: 21px;
-}
-
-.our_service_table {
-    display: grid;
-    grid-template-columns: 320px 320px 320px;
-    grid-template-rows: 86px 86px;
-    padding-top: 48px;
-    grid-row-gap: 37px;
-}
-
-.our_services_names {
-    font-size: 18px;
     line-height: 18px;
     color: #666d89;
     font-family: "Lato";
     font-weight: 900;
     text-align: left;
+    padding-top: 69px;
 }
 
-.our_services_description {
-    width: 219px;
+.portfolio_description {
+    background-origin: padding-box;
+    width: 100%;
+    /* border: 1px solid green; */
+    height: 18px;
+}
+
+.portfolio_description_text {
+    font-size: 18px;
+    line-height: 18px;
+    color: #767e9e;
+    font-family: "Lato";
+    font-weight: 300;
+    text-align: left;
+    /* border: 1px solid yellow; */
+}
+
+.portfolio_menu_navbar {
+    letter-spacing: 0px;
+    width: 290px;
     font-size: 12px;
     line-height: 22px;
+    /* color: #767e9e; */
+    font-family: "Lato";
+    font-weight: 400;
+    text-align: left;
+    margin-top: 17px;
+}
+
+.portfolio_menu_navbar_list {
+    display: flex;
+    justify-content: space-between;
+}
+
+.portfolio_menu_navbar ul li a {
+    color: #767e9e;
+    text-decoration: none;
+    border: 1px solid #767e9e;
+    border-radius: 5px;
+    padding: 2px 6.5px 2.5px 6.5px;
+    /* padding: auto; */
+}
+
+.portfolio_menu_navbar ul li a:hover {
+    color: #dedede;
+    border: 1px solid   #dedede;
+}
+
+.portfolio_grid {
+    display: grid;
+    grid-template-columns: 220px 220px 220px 220px;
+    grid-template-rows: 187px 187px 187px;
+    grid-row-gap: 20px;
+    grid-column-gap: 20px;
+    padding-top: 19px;
+    overflow: hidden;
+    max-height: 620px;
+}
+
+.portfolio_grid_cell {
+    /* height: 187px;
+    width: 220px; */
+    background-color: #666d89;
+}
+
+.about {
+    display: flex;
+    justify-content: center;
+    height: 730px;
+    background-color: #f2f2f2;
+}
+
+.about_main {
+    width: 940px;
+}
+
+.about_title {
+    height: 45px;
+    width: 100%;
+    padding-top: 68px;
+}
+.about_title_text {
+    font-size: 30px;
+    line-height: 18px;
+    color: #666d89;
+    font-family: "Lato";
+    font-weight: 900;
+    text-align: left;
+    letter-spacing: 0px;
+}
+
+.about_description_text {
+    width: 940px;
+    height: 57px;
+    font-size: 18px;
+    line-height: 30px;
+    color: #767e9e;
+    font-family: "Lato";
+    font-weight: 300;
+    text-align: left;
+    letter-spacing: 0.1px;
+}
+
+.photo_grid {
+    display: grid;
+    grid-template-columns: repeat(3, 300px);
+    grid-template-rows: 300px;
+    column-gap: 20px;
+    row-gap: 20px;
+    padding-top: 48px;
+}
+
+.photo_description_name {
+    font-size: 18px;
+    line-height: 46px;
+    color: #666d89;
+    font-family: "Lato";
+    font-weight: 900;
+    text-align: left;
+    letter-spacing: -0.1px;
+}
+
+.photo_description_text {
+    width: 300px;
+    height: 64px;
+    font-size: 12px;
+    line-height: 20px;
     color: #767e9e;
     font-family: "Lato";
     font-weight: 400;
     text-align: left;
-    padding-top: 8px;
-    overflow: hidden;
+    margin-top: -2px;
 }
 
-.our_services_img_wrapper {
-    height: 86px;
+.photo_cell_navbar {
+    letter-spacing: 0px;
+    width: 160px;
+} 
+
+.photo_cell_navbar_list {
     display: flex;
-    align-items: flex-start;
-}
-
-.our_services_cell {
-    display: flex;
-    height: 86px;
-}
-
-.our_services_names {
-    width: 219px;
-}
-
-.our_services_text_cell {
-    display: flex;
-    flex-direction: column;
     justify-content: space-between;
-    padding-left: 20px;
+}
+
+.photo_cell_navbar .social_link {
+    width: 32px;
+    height: 32px;
+    color: #767e9e;
+    text-decoration: none;
+    border: 1px solid #767e9e;
+    border-radius: 50%;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-left: 1px;
+    margin-right: 7px;
+}
+
+.social_link {
+    fill: #666d89;
+}
+.social_link:hover {
+    fill: #393e55;
+    border-color: black;
 }
