--- a/style.css
+++ b/style.css
@@ -18,9 +18,11 @@
     display: flex;
     background-color: #2d303a;
     justify-content: space-between;
-    width: 940px;
+    width: 1022px;
     align-items: center;
     border-bottom: 6px solid #323746;
+    position:fixed;
+    z-index: 999;
 }
 
 .header_h1 {
@@ -37,6 +39,7 @@
     font-style: normal;
     text-transform: uppercase;
     text-decoration: none;
+    margin-left: 42px;
 }
 
 .logo .text {
@@ -56,6 +59,7 @@
     font-style: normal;
     text-transform: uppercase;
     margin-top: 10px;
+    margin-right: 42px;
 }
 
 .navbar .navbar_list {
@@ -74,17 +78,100 @@
 
 .slider {
     background-color: #f06c64;
-    width: 100%;
+    width: 1024px;
     height: 594px;
     border-bottom: 6px solid #ea676b;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-top: 96px;
+    /* position: absolute; */
+}
+
+.slider_new_background {
+    background-color: #648BF0;
+    border-bottom: 6px solid #648BF0;
+}
+
+.button_new_background {
+    background-color: #648BF0;
 }
 
 .slider .main {
     display: flex;
     width: 796px;
+}
+
+.slide2 {
+    float: left;
+    width: 100%;
+    height: 606px;
+    /* padding: 150px 0 54px; */
+    background-color: #648BF0;
+}
+
+.item {
+    display: none;
+    position: relative;
+    animation: 0.5s ease-in-out;
+}
+
+.item.active {
+    display: block;
+}
+
+
+.active,
+.next {
+    display: block;
+} 
+
+ .next {
+    position: absolute;
+    width: 100%;
+    top:0;
+}
+
+.item_container {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+}
+
+.to-left {
+    animation-name: left;
+}
+
+.to-right {
+    animation-name: right;
+    animation-direction: reverse;
+}
+
+.from-left {
+    animation-name: left;
+    animation-direction: reverse;
+}
+
+.from-right {
+    animation-name: right;
+}
+
+@keyframes left {
+    from {
+        left: 0;
+    }
+    to {
+        left: -100%
+    }
+}
+
+@keyframes rigth {
+    from {
+        left: 100%;
+    }
+    to {
+        left: 0%
+    }
 }
 
 .iphone_vert {
@@ -96,6 +183,83 @@
     position: relative;
     top: 85px;
 }
+
+/***********/
+
+.slider2_wrap {
+    position: relative;
+}
+
+.slider2__image_1 {
+    position: absolute;
+    top: 158px;
+    left: 172px;
+    z-index: 0;
+    cursor: pointer;
+}
+
+.slider-wrap__black-vertical-one {
+    position: absolute;
+    width: 123px;
+    height: 218px;
+    background-color: #000;
+    left: 180px;
+    top: 146px;
+    z-index: 2;
+    cursor: pointer;
+}
+
+/* .slider-wrap__screen-wrap-vertical-two {
+    position: relative;
+} */
+
+.slider2__image_2 {
+    position: absolute;
+    top: 49px;
+    left: 303px;
+    z-index: 1;
+    cursor: pointer;
+}
+
+.slider-wrap__black-vertical-two {
+    position: absolute;
+    width: 201px;
+    height: 355px;
+    background-color: #000;
+    right: 332px;
+    top: 63px;
+    z-index: 2;
+    cursor: pointer;
+}
+
+/* .slider-wrap__screen-wrap-vertical-three {
+    position: relative;
+} */
+
+.slider2__image_3 {
+    position: absolute;
+    top: 158px;
+    left: 532px;
+    z-index: 0;
+    cursor: pointer;
+}
+
+.slider-wrap__black-vertical-three {
+    position: absolute;
+    width: 123px;
+    height: 218px;;
+    background-color: #000;
+    right: 186px;
+    top: 146px;
+    z-index: 2;
+    cursor: pointer;
+}
+/***********/
+
+
+/* .action_button {
+    background-color:  #f06c64;
+} */
 
 .button {
     height: 27px;
